--- a/tools-collection/ncm2mp3/frontend/src/style.css
+++ b/tools-collection/ncm2mp3/frontend/src/style.css
@@ -1,12 +1,12 @@
 html {
-    background-color: rgba(27, 38, 54, 1);
-    text-align: center;
+    /* background-color: rgba(27, 38, 54, 1); */
+    /* text-align: center; */
     color: white;
 }
 
 body {
     margin: 0;
-    color: white;
+    color: black;
     font-family: "Nunito", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
     "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -21,6 +21,6 @@ body {
 }
 
 #app {
-    height: 100vh;
-    text-align: center;
+    height: 100%;
+    /* text-align: center; */
 }
